--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <input type="number" name="FirstName" id="FirstName">
         <input type="text" name="LastName" id="LastName">
         <input type="number" name="age" id="age">
+        <img src="#" alt="Text img">
         <input type="button" value="enviar">
     </form>
 </body>
